package name too long , fix.

--- a/ExtremeInvestmentProfitsApp/package.json
+++ b/ExtremeInvestmentProfitsApp/package.json
@@ -8,6 +8,6 @@
   },
   "description": "ExtremeInvestmentProfitsApp",
   "main": "app.js",
-  "name": "Extreme Investment Profits App",
+  "name": "ExtremeProfitsApp",
   "version": "0.0.0"
 }
